Bug 736903: nsHttpChannel wraps the aOffset value it passes to its stream listener instead of clamping it, r=cbiesinger